Java 9 support Bugs fix Adding unit test cases